    - Made checking for already loaded modules O(n) instead of previous
      O(n^2).
    - Other speedups.
    - Never display "[Unknown]" as a module name in the selection list.
    - The airport test is good enough to not belong in get_manual_hw_info.
    - Ask the start_pcmcia qestion.
    - Mark the start_pcmcia question as translatable.
    - Only ask the question and start pcmcia if pcmcia is not running
      (uses its pid file).
  * Christian Perrier
    - Removed the double questioning in the pcmcia_start template
      Reworded the template for simplification

 -- Christian Perrier <bubulle@kheops.frmug.org>  Thu, 29 Apr 2004 10:21:55 +0200

ddetect (0.93) unstable; urgency=low

  * Joey Hess
    - There is no reason to hardcode the path to discover. Especially not
      when you hardcode the wrong path. Especially not when it breaks with
      discover 2 on 2.6 kernels.

 -- Joey Hess <joeyh@debian.org>  Tue, 27 Apr 2004 20:39:29 -0400

ddetect (0.92) unstable; urgency=low

  * Joey Hess
    - Add || true after calls to discover --version, makes it work on 2.6
      kernel again.

 -- Joey Hess <joeyh@debian.org>  Tue, 27 Apr 2004 19:57:12 -0400

ddetect (0.91) unstable; urgency=low

  * Joey Hess
    - Complete the discover transition by apt-installing discover1, which is
      now in testing.

 -- Joey Hess <joeyh@debian.org>  Sat, 24 Apr 2004 12:05:28 -0400

ddetect (0.90) unstable; urgency=low

  * Petter Reinholdtsen
    - Stop hw-detect from failing if /etc/network/ is
      missing. (Closes: #245535)
    - Log when pcmcia and hotplut support is detected.
    - Rewrite the code detecting which version of discover to use, and
      make it easier to change which package to install in /target/
      based on this.

 -- Petter Reinholdtsen <pere@debian.org>  Sat, 24 Apr 2004 11:47:42 +0200

ddetect (0.89) unstable; urgency=low

  * Updated translations: 
    - Bulgarian (bg.po) by Ognyan Kulev
    - Bokmal, Norwegian (nb.po) by Bjørn Steensrud